# srt-tools

./: Cargo.toml  README.md  sample.srt
src/: lib.rs  main.rs
tests/: cli.rs
