[package]
name = "srt-tools"
version = "0.1.0"
edition = "2021"
description = "A subtitle (SRT/VTT) manipulation toolkit: shift, convert, merge, fix, and scale."
license = "MIT"
readme = "README.md"
repository = ""
keywords = ["subtitle", "srt", "vtt", "cli", "subtitles"]
categories = ["command-line-utilities"]

[[bin]]
name = "srt-tools"
path = "src/main.rs"

[lib]
name = "srt_tools"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
